--- a/MasterDetail/src/org/biz/invoicesystem/master/ui/StaffMasterTab.form
+++ b/MasterDetail/src/org/biz/invoicesystem/master/ui/StaffMasterTab.form
@@ -20,34 +20,34 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="itemTabPane" alignment="0" pref="823" max="32767" attributes="0"/>
+          <Component id="jTabbedPane1" min="-2" pref="800" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="itemTabPane" min="-2" pref="514" max="-2" attributes="0"/>
+          <Component id="jTabbedPane1" alignment="0" pref="458" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JTabbedPane" name="itemTabPane">
+    <Container class="javax.swing.JTabbedPane" name="jTabbedPane1">
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
-        <Component class="org.biz.invoicesystem.master.ui.ItemMasterUI2" name="itemMasterUI21">
+        <Component class="org.biz.invoicesystem.master.ui.StaffListUi" name="staffListUi1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="tab2">
-                <Property name="tabTitle" type="java.lang.String" value="tab2"/>
+              <JTabbedPaneConstraints tabName="List">
+                <Property name="tabTitle" type="java.lang.String" value="List"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="org.biz.invoicesystem.master.ui.ItemListUi" name="itemListUi1">
+        <Component class="org.biz.invoicesystem.master.ui.StaffMasterUI" name="staffMasterUI1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="tab1">
-                <Property name="tabTitle" type="java.lang.String" value="tab1"/>
+              <JTabbedPaneConstraints tabName="Form">
+                <Property name="tabTitle" type="java.lang.String" value="Form"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
