--- a/trunk/InvoicingSystemTU/src/invoicingsystem/InvoiceMasterUi.form
+++ b/trunk/InvoicingSystemTU/src/invoicingsystem/InvoiceMasterUi.form
@@ -11,7 +11,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,103,0,0,3,-80"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,6,0,0,3,-80"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
@@ -273,11 +273,14 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="10" y="90" width="140" height="-1"/>
+              <AbsoluteConstraints x="10" y="90" width="60" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
         <Component class="org.components.controls.CButton" name="cButton1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Save"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cButton1ActionPerformed"/>
           </Events>
@@ -642,12 +645,13 @@
                 </Column>
               </TableColumnModel>
             </Property>
+            <Property name="sortable" type="boolean" value="false"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new org.components.controls.CxTable(){&#xa;public boolean isCurrentRowValid() {&#xa;        return validateRow();&#xa;    }&#xa;}"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new org.components.controls.CxTable(){&#xa;    public boolean isCurrentRowValid() {&#xa;        return validateRow();&#xa;    }&#xa;    public boolean action(){&#xa;        if(tblInvoice.getSelectedColumn()==5){&#xa;&#xa;            System.out.println(&quot;table action called&quot;);&#xa;            return true;&#xa;        }&#xa;return false; &#xa;    }&#xa;&#xa;}"/>
           </AuxValues>
         </Component>
       </SubComponents>
